# evo

./: .archived-implementation-summary-2025-10-17.md  .env  .git-scopes  .gitignore  .mcp.json  .pre-commit-check.sh  .shadow-cljs-mode  2025-10-02-09-28-src-overview.md  2025-10-02-09-29-.-overview.md  AGENTS.md  ANALYSIS_README.md  ANCHOR_REFACTOR_ANALYSIS.md  AUDIO_TEST_CHECKLIST.md  AUTO-DEV-OVERVIEW-PROMPT.md  AUTO-PROJECT-OVERVIEW-PROMPT.md  AUTO-SOURCE-OVERVIEW-PROMPT.md  BUG-REPORT.md  CLAUDE.md  COMPREHENSIVE-TEST-RESULTS.md  DEV-TOOLING-ANALYSIS.md  DEV.md  DEVTOOLS_QUICKSTART.md  DEV_SCRIPTS.md  DEV_TOOLING_GUIDE.md  DOCS-EVALUATION.md  DOCUMENTATION_INDEX.md  EVO_ARCHITECTURE_ANALYSIS.md  EVO_FEATURE_MAPPING.md  FINAL-SUMMARY.md  FR_MATRIX.md  HOTKEYS_AND_ACTIONS.md  HOTKEYS_QUICK_REFERENCE.md  IMPROVEMENTS-2025-10-13.md  INTENTS_REFERENCE.md  MCP-CLJS-BRIDGE.md  MCP-REPL-GUIDE.md  PROJECT-GUIDE.md  PROJECT_NAVIGATION_GUIDE.md  README.md  REFACTORINGS-2025-10-14.md  (+62 more)
.agentlog/: session-2025-01-10-13-25.md  session-2025-09-26-10-45.md  session-2025-09-26-12-19.md  session-2025-09-26-12-38.md  session-2025-09-26-12-47.md  session-2025-09-26T21-40.md  session-20250926.md  session-20250926_150946.md  suggest-20250126_120000.md  suggest-20250926_132711.md
.architect/: ARCH-RECOMMENDATIONS-2025-10-24.md  KEYMAP_MIGRATION_COMPLETE.md  README.md  (+16 more)
mcp/eval/: .env.example  .mcp.json  IMPLEMENTATION.md  README.md  eval_server.py  pyproject.toml  test_client.py
mcp/review/: README.md  __init__.py  __main__.py  providers.py  pyproject.toml  server.py  storage.py
(+1299 files in other folders)
