[project]
name = "evo-eval-mcp"
version = "0.1.0"
description = "MCP server for AI-judge tournament evaluation"
authors = [{name = "Evo Project"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
